# translator

./: CMakeLists.txt  README.md
gtest/: CMakeLists.txt
include/: calculation.h  lexical_analysis.h  parser.h  syntax_analysis.h  tokens.h  translator.h
src/: calculation.cpp  lexical_analysis.cpp  parser.cpp  syntax_analysis.cpp  translator.cpp
test/: CMakeLists.txt  test_translator.cpp
